# DataGen

./: README.md  pyproject.toml  test_template.py
samples/: sample_schema.json  sample_v2.json
src/datagen/: main.py
src/datagen/core/: dirty.py  export.py  generator.py  schema.py
src/datagen/ui/: streamlit_ui.py
src/datagen/ui/tabs/: advance.py  analysis.py  data_quality.py  generator.py  helps.py
src/datagen/utils/: helpers.py
tests/: conftest.py  test_dirty.py  test_export.py  test_generator.py  test_schema.py  test_utils.py
