[project]
name = "datagen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "faker>=37.3.0",
    "fastparquet>=2024.11.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "plotly>=6.1.2",
    "pyarrow>=20.0.0",
    "pydantic>=2.11.5",
    "pytest>=8.3.5",
    "pytest-mock>=3.14.1",
    "streamlit>=1.45.1",
]
